feat/front + back

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,6 +63,10 @@
 			<artifactId>spring-messaging</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-messaging</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
