--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,15 @@
     "@stomp/stompjs": "^7.0.0",
     "matter-js": "^0.20.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/matter-js": "^0.19.7",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
