--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
+    "axios": "^1.7.7",
     "lottie-react": "^2.4.0",
     "matter-js": "^0.20.0",
     "react": "^18.3.1",
